...
  "Claim tokens...": "Claim tokens...",
  "Clear Identity": "Clear Identity",
  "Clear all": "Clear all",
  "Clear expired democracy locks": "Clear expired democracy locks",
  "Clear expired referenda locks": "Clear expired referenda locks",
  "Consider storing your account in a signer such as a browser extension, hardware device, QR-capable phone wallet (non-connected) or desktop application for optimal account security.": "Consider storing your account in a signer such as a browser extension, hardware device, QR-capable phone wallet (non-connected) or desktop application for optimal account security.",
  "Create": "Create",
  "Create a backup file for this account": "Create a backup file for this account",
  "Custom index": "Custom index",
  "Delegate": "Delegate",
  "Delegate democracy votes": "Delegate democracy votes",
  "Derivation for Ledger-type accounts are only available on mnemonic seeds.": "Derivation for Ledger-type accounts are only available on mnemonic seeds.",
  "Derive": "Derive",
...
  "Github name": "Github name",
  "I have saved my mnemonic seed safely": "I have saved my mnemonic seed safely",
  "Identity": "Identity",
  "If the delegated account is currently voting in a referendum, the delegating vote and conviction will be added.": "If the delegated account is currently voting in a referendum, the delegating vote and conviction will be added.",
  "If you add several proxy accounts for the same proxy type (e.g 2 accounts set as proxy for Governance), then any of those 2 accounts will be able to perform governance actions on behalf of the proxied account": "If you add several proxy accounts for the same proxy type (e.g 2 accounts set as proxy for Governance), then any of those 2 accounts will be able to perform governance actions on behalf
  "If you are moving accounts between applications, ensure that you use the correct type.": "If you are moving accounts between applications, ensure that you use the correct type.",
  "Import": "Import",
  "Initiate account recovery": "Initiate account recovery",
  "Initiate recovery for another": "Initiate recovery for another",
  "It is recommended that you create/store your accounts securely and externally from the app. On {{yourBrowser}} the following browser extensions are available for use -": "It is recommended that you create/store your accounts securely and externally from the app. On {{yourBrowser}} the following browser extensions are available for use -",
  "Learn more...": "Learn more...",
  "Ledger app type (originated from)": "Ledger app type (originated from)",
  "Local": "Local",
...
